# elevated-cycling

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  flake.nix  flake.old.nix  package.json  pg_dump.sql  pnpm-lock.yaml  rust-toolchain.toml
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: elevation.rs  file_cache.rs  json_to_postcard.rs  lib.rs  main.rs  postcard_stream_deserializer.rs  sql.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: integration.rs
crates/obfuscat/: Cargo.toml
crates/obfuscat/src/: encoder.rs  lib.rs  main.rs  range_from_str.rs
crates/range_split/: Cargo.toml
crates/range_split/src/: alpha_path.rs  encoder.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: bootstrap_buffer.rs  elevation.rs  handler.rs  main.rs
crates/server/src/traits/: mod.rs  partition_results.rs
crates/server/templates/: index.liquid
crates/traits/: Cargo.toml
crates/traits/src/: average.rs  futures_concurently.rs  into_node_id_point.rs  lib.rs
fixtures/: map.osm.pbf
images/elevation/: Dockerfile  config.ini
migrations/: 0001.sql
parts/: aaaaaaaaaaaaaaaj  aaaaaaaaaaaaaabg  aaaaaaaaaaaaaabl  aaaaaaaaaaaaaabo  aaaaaaaaaaaaaaci  aaaaaaaaaaaaaads  aaaaaaaaaaaaaaei  aaaaaaaaaaaaaael  aaaaaaaaaaaaaafa  aaaaaaaaaaaaaaff  aaaaaaaaaaaaaafi
postgres.d/: dbinit.sql
private/: map.html
public/: index.html  map.html
scripts/: commit_parts.sh  decode.sh  encode.sh  incremental_push.sh  push_parts.sh
src/: algo.rs  all_simple_paths.rs  connections.rs  download.rs  elevation.rs  iter_ext.rs  lib.rs  main.rs  map.rs  osm.rs  osm_pbf.rs  tupled_joined.rs
src/traits/: all_simple_paths.rs  collect_tuples.rs  composed.rs  contramap.rs  element_reader_ext.rs  fmap.rs  futures_concurently.rs  into_node_id_point.rs  join_all.rs  mod.rs  par_map_collect.rs  redb_ext.rs  split_while.rs
