[package]
name = "elevated-cycling"
authors = ["Wayne Van Son"]
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["env", "derive"] }
clap-verbosity-flag = "2.2.3"
anyhow = "1.0.93"
env_logger = "0.11.5"
osmpbf = "0.3.4"
tokio = { version = "1.41.1", features = ["full"] }
itertools = "0.13.0"
num-traits = "0.2.19"
futures = "0.3.31"
geo = { version = "0.29.3", features = ["use-serde"] }
len-trait = "0.6.1"
url = "2.5.4"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
bytesize = "1.3.0"
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
log = "0.4.28"
geotiff = "0.1.0"
tiff = "0.10.3"
petgraph = { version = "0.8.2", features = ["serde"] }
redb = "3.0.1"
