[package]
name = "elevated-cycling"
authors = ["Wayne Van Son"]
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytesize = "1.3.0"
clap = { version = "4.5.21", features = ["env", "derive"] }
clap-verbosity-flag = "2.2.3"
env_logger = "0.11.5"
futures = "0.3.31"
geo = { version = "0.29.3", features = ["use-serde"] }
geotiff = "0.1.0"
itertools = "0.13.0"
len-trait = "0.6.1"
log = "0.4.28"
num-traits = "0.2.19"
osmpbf = "0.3.4"
petgraph = { version = "0.8.2", features = ["serde"] }
rayon = "1.11.0"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.224", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
], default-features = false }
tokio = { version = "1.41.1", features = ["full"] }
