[package]
name = "elevated-cycling-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "elevated-cycling"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["env", "derive"] }
clap-verbosity-flag = "2.2.3"
env_logger = "0.11.5"

[dev-dependencies]
assert_cmd = "2.0.16"
