[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros", "query"] }
derive_more = { version = "1.0.0", features = ["full"] }
distance = "0.4.0"
futures = "0.3.31"
geo = "0.29.1"
itertools = "0.13.0"
len-trait = "0.6.1"
liquid = "0.26.9"
num-traits = "0.2.19"
petgraph = { version = "0.6.5", features = ["rayon"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.67"
tokio = { version = "1.41.0", features = ["full"] }
traits = { path = "../traits" }
